--- a/about.html
+++ b/about.html
@@ -117,6 +117,9 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
+    <!-- Theme Toggle Script -->
+    <script src="/physicstuff-pages/assets/js/theme-toggle.js"></script>
+    
     <!-- Custom JS -->
     <script src="/physicstuff-pages/assets/js/main.js"></script>
 </body>
